--- a/front-end/src/layout/styles.scss
+++ b/front-end/src/layout/styles.scss
@@ -1,8 +1,13 @@
 .menu {
-    width: 25%;
+    width: 20%;
     height: 100vh;
 
     background-color: var(--primary);
+}
+
+.content {
+    width: 80%;
+    padding: 50px;
 }
 
 .link {
